Create Group activity and xml

--- a/GiftExchange/app/src/main/AndroidManifest.xml
+++ b/GiftExchange/app/src/main/AndroidManifest.xml
@@ -55,6 +55,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="edu.ucsd.cse110wi16.giftexchange.adminSettings" />
         </activity>
+        <activity
+            android:name=".CreateGroup"
+            android:label="@string/title_activity_create_group"></activity>
     </application>
 
 </manifest>
