--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,12 @@
-# Built application files
-/*/build/
+# Ignore all files
+*
 
-# Crashlytics configuations
-com_crashlytics_export_strings.xml
-
-# Local configuration file (sdk path, etc)
-local.properties
-
-# Gradle generated files
-.gradle/
-
-# Signing files
-.signing/
-
-# User-specific configurations
-*.idea
-.idea/libraries/
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/.name
-.idea/compiler.xml
-.idea/copyright/profiles_settings.xml
-.idea/encodings.xml
-.idea/misc.xml
-.idea/modules.xml
-.idea/scopes/scope_settings.xml
-.idea/vcs.xml
-*.iml
-
-# OS-specific files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+# Except
+!.gitignore
+!GiftExchangeApplication/app/*
+!GiftExchangeApplication/grade/*
+!GiftExchangeApplication/gradle.properties
+!GiftExchangeApplication/gradlew
+!GiftExchangeApplication/gradlew
+!GiftExchangeApplication/gradlew.bat
+!GiftExchangeApplication/settings.gradle
