--- a/GiftExchangeApplication/app/src/main/AndroidManifest.xml
+++ b/GiftExchangeApplication/app/src/main/AndroidManifest.xml
@@ -5,15 +5,14 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name="cse110.giftexchangeapplication.GiftExchangeApplication"
+        android:name=".GiftExchangeApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
-            android:name="cse110.giftexchangeapplication.ui.MainActivity"
+            android:name=".ui.MainActivity"
             android:label="Gift Exchange App"
             android:windowSoftInputMode="adjustPan">
             <meta-data
@@ -26,5 +25,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.adminSettings.AdminSettingsActivity"
+            android:label="Admin Settings"
+            android:theme="@style/AppTheme"></activity>
     </application>
+
 </manifest>
