--- a/GiftExchangeApplication/app/build.gradle
+++ b/GiftExchangeApplication/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "cse110.giftexchangeapplication"
+        applicationId "com.cse110.giftexchangeapplication"
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 1
