--- a/GiftExchangeApplication/app/src/main/AndroidManifest.xml
+++ b/GiftExchangeApplication/app/src/main/AndroidManifest.xml
@@ -5,14 +5,16 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".GiftExchangeApplication"
+        android:name="cse110.giftexchangeapplication.GiftExchangeApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name="cse110.giftexchangeapplication.ui.MainActivity"
+            android:label="Gift Exchange App"
             android:windowSoftInputMode="adjustPan">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -24,14 +26,29 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.MainActivity"
-            android:label="Current Groups"
-            android:theme="@style/AppTheme" />
-        <activity
-            android:name=".ui.createAccount.CreateAcctActivity"
-            android:label="Create New Account"
-            android:theme="@style/AppTheme"></activity>
-    </application>
 
+        <activity
+            android:name=".ui.activeGroupsDetails.ActiveGroupsDetailsActivity"
+            android:label="Group Details"
+            android:parentActivityName=".ui.MainActivity"
+            android:windowSoftInputMode="adjustPan">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.MainActivity" />
+        </activity>
+
+        <activity android:name=".ui.login.LoginActivity">
+
+        </activity>
+
+        <activity
+            android:name=".ui.login.CreateAccountActivity"
+            android:label="@string/title_activity_create_account"
+            android:parentActivityName=".ui.login.LoginActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.login.LoginActivity" />
+        </activity>
+
+    </application>
 </manifest>
