--- a/GiftExchangeApplication/app/build.gradle
+++ b/GiftExchangeApplication/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 23
@@ -40,4 +41,9 @@ dependencies {
     // Firebase stuff
     compile 'com.firebase:firebase-client-android:2.4.0'
     compile 'com.firebaseui:firebase-ui:0.2.2'
+    compile 'com.google.android.gms:play-services-appindexing:8.3.0'
+
+    /* For Google Play Services */
+    compile 'com.google.android.gms:play-services-safetynet:8.3.0'
+    compile 'com.google.android.gms:play-services-auth:8.3.0'
 }
