--- a/GiftExchangeApplication/gradle.properties
+++ b/GiftExchangeApplication/gradle.properties
@@ -15,4 +15,5 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-UniqueFirebaseRootUrl = "https://giftexchangeapp.firebaseio.com/"
+//UniqueFirebaseRootUrl = "https://giftexchangeapp.firebaseio.com/"
+UniqueFirebaseRootUrl = "https://torrid-fire-3023.firebaseio.com/"
