--- a/GiftX/app/build.gradle
+++ b/GiftX/app/build.gradle
@@ -10,6 +10,8 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -27,6 +29,11 @@ android {
         exclude 'META-INF/LICENSE-FIREBASE.txt'
         exclude 'META-INF/NOTICE'
     }
+
+    // Allow gradle to build
+    configurations.all {
+        resolutionStrategy.force 'com.android.support:support-annotations:23.1.1'
+    }
 }
 
 dependencies {
@@ -40,4 +47,11 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'com.firebase:firebase-client-android:2.4.0'
     compile 'com.firebaseui:firebase-ui:0.2.2'
+
+    // Espresso testing dependency
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
+    androidTestCompile 'com.android.support.test:runner:0.3'
+    androidTestCompile 'com.android.support.test:rules:0.3'
+
+
 }
