--- a/GiftExchangeApplication/gradle.properties
+++ b/GiftExchangeApplication/gradle.properties
@@ -15,4 +15,4 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-UniqueFirebaseRootUrl = "https://sizzling-torch-1716.firebaseio.com/"
+UniqueFirebaseRootUrl = "https://burning-heat-3076.firebaseio.com/"
