added Miguels latest work and added BDD tests

--- a/GiftX/gradle.properties
+++ b/GiftX/gradle.properties
@@ -16,4 +16,4 @@
 # org.gradle.parallel=true
 
 #Test Database Link
-UniqueFirebaseRootUrl = "https://sizzling-torch-1716.firebaseio.com"
+UniqueFirebaseRootUrl = "https://giftx.firebaseio.com"
