--- a/GiftX/app/src/main/AndroidManifest.xml
+++ b/GiftX/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         <activity
             android:name="cse110.giftX.ui.MainActivity"
             android:label="giftX"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
