--- a/GiftX/app/src/main/AndroidManifest.xml
+++ b/GiftX/app/src/main/AndroidManifest.xml
@@ -37,15 +37,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="cse110.giftX.ui.MainActivity" />
         </activity>
-        <activity
-            android:name=".ui.adminSettings.AdminSettingsActivity"
-            android:label="Admin Settings"
-            android:parentActivityName=".ui.MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ui.adminSettings.AdminSettingsActivity"
-                />
-        </activity>
+        <!--<activity-->
+            <!--android:name="cse110.giftX.ui.adminSettings.AdminSettingsActivity"-->
+            <!--android:label="Admin Settings"-->
+            <!--android:parentActivityName=".ui.MainActivity">-->
+            <!--<meta-data-->
+                <!--android:name="android.support.PARENT_ACTIVITY"-->
+                <!--android:value="cse110.giftX.ui.adminSettings.AdminSettingsActivity"-->
+                <!--/>-->
+        <!--</activity>-->
         <activity android:name="cse110.giftX.ui.login.LoginActivity" />
         <activity
             android:name="cse110.giftX.ui.login.CreateAccountActivity"
@@ -62,6 +62,15 @@
         <activity
             android:name="cse110.giftX.ui.activeGroupsDetails.PostSortActivity"
             android:label="@string/title_activity_post_sort"
+            android:theme="@style/AppTheme" />
+
+        <activity
+            android:name="cse110.giftX.ui.adminSettings.AdminSettingsActivity"
+            android:label="@string/title_activity_admin_settings"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name="cse110.giftX.ui.adminSettings.AdminEditUsersActivity"
+            android:label="@string/title_activity_remove_users"
             android:theme="@style/AppTheme" />
         <activity android:name="cse110.giftX.ui.userProfile.UserProfileActivity"></activity>
     </application>
