final version to be graded

--- a/GiftX/gradle.properties
+++ b/GiftX/gradle.properties
@@ -15,4 +15,5 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-UniqueFirebaseRootUrl = "https://giftx.firebaseio.com/"
+#Test Database Link
+UniqueFirebaseRootUrl = "https://giftx.firebaseio.com"
