--- a/GiftX/app/src/main/AndroidManifest.xml
+++ b/GiftX/app/src/main/AndroidManifest.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cse110.giftx">
+    package="cse110.giftX">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.USE_CREDENTIALS" />
 
     <application
-        android:name=".GiftX"
+        android:name="giftX"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="cse110.giftx.ui.MainActivity"
-            android:label="Gift Exchange App"
+            android:name="cse110.giftX.ui.MainActivity"
+            android:label="giftX"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="cse110.giftx.ui.MainActivity" />
+                android:value="cse110.giftX.ui.MainActivity" />
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,32 +29,50 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="cse110.giftx.ui.activeGroupsDetails.ActiveGroupsDetailsActivity"
+            android:name="cse110.giftX.ui.activeGroupsDetails.ActiveGroupsDetailsActivity"
             android:label="Group Details"
-            android:parentActivityName="cse110.giftx.ui.MainActivity"
+            android:parentActivityName="cse110.giftX.ui.MainActivity"
             android:windowSoftInputMode="adjustPan">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="cse110.giftx.ui.MainActivity" />
+                android:value="cse110.giftX.ui.MainActivity" />
         </activity>
-        <activity android:name="cse110.giftx.ui.login.LoginActivity" />
+        <!--<activity-->
+            <!--android:name="cse110.giftX.ui.adminSettings.AdminSettingsActivity"-->
+            <!--android:label="Admin Settings"-->
+            <!--android:parentActivityName=".ui.MainActivity">-->
+            <!--<meta-data-->
+                <!--android:name="android.support.PARENT_ACTIVITY"-->
+                <!--android:value="cse110.giftX.ui.adminSettings.AdminSettingsActivity"-->
+                <!--/>-->
+        <!--</activity>-->
+        <activity android:name="cse110.giftX.ui.login.LoginActivity" />
         <activity
-            android:name="cse110.giftx.ui.login.CreateAccountActivity"
+            android:name="cse110.giftX.ui.login.CreateAccountActivity"
             android:label="@string/title_activity_create_account"
-            android:parentActivityName="cse110.giftx.ui.login.LoginActivity">
+            android:parentActivityName="cse110.giftX.ui.login.LoginActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="cse110.giftx.ui.login.LoginActivity" />
+                android:value="cse110.giftX.ui.login.LoginActivity" />
         </activity>
         <activity
-            android:name="cse110.giftx.ui.activeGroups.CreateGroupActivity"
+            android:name="cse110.giftX.ui.activeGroups.CreateGroupActivity"
             android:label="@string/title_activity_create_group"
             android:theme="@style/AppTheme" />
         <activity
-            android:name="cse110.giftx.ui.activeGroupsDetails.PostSortActivity"
+            android:name="cse110.giftX.ui.activeGroupsDetails.PostSortActivity"
             android:label="@string/title_activity_post_sort"
             android:theme="@style/AppTheme" />
-        <activity android:name="cse110.giftx.ui.userProfile.UserProfileActivity"></activity>
+
+        <activity
+            android:name="cse110.giftX.ui.adminSettings.AdminSettingsActivity"
+            android:label="@string/title_activity_admin_settings"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name="cse110.giftX.ui.adminSettings.AdminEditUsersActivity"
+            android:label="@string/title_activity_remove_users"
+            android:theme="@style/AppTheme" />
+        <activity android:name="cse110.giftX.ui.userProfile.UserProfileActivity"></activity>
     </application>
 
 </manifest>
